--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,6 @@ urllib3==2.4.0
 virtualenv==20.31.2
 Werkzeug==3.1.3
 zipp==3.23.0
-psycopg2-binary==2.9,<3
+psycopg[binary]>=3.1,<4
 boto3>=1.34,<2
-gunicorn>=21,<22
+gunicorn>=23
