update to trying to figure out auio

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,15 @@ Thumbs.db
 *.swp
 *.swo
 
-# keep static assets out of Git except the publish manifest
+# keep static assets out of Git except the small runtime helpers and the per-set manifest
 docs/static/*
+
+# allow the per-set manifest used by the frontend to resolve audio from R2/CDN
 !docs/static/**/r2_manifest.json
+
+# allow the tiny runtime helpers (needed by pages)
+!docs/static/js/
+!docs/static/js/**
+
+# allow LFS override so mp3 commits don't get blocked silently
+!docs/static/.gitattributes
